changes related to network connection

--- a/configs/econConfig.json
+++ b/configs/econConfig.json
@@ -1,26 +1,27 @@
 {
   "planningLength": 91,
-  "freshYield": 2.5229,  
+  "freshYield": 5.5,
   "juiceYield": 0.0,
-  "freshPrice": 17.80,
+  "freshPrice": 17.80, 
   "juicePrice": 0.0,
-  "costs": 36.05,
+  "costs": 36.05, 
   "biologicalRun": false,
   "projectionLength": 3600,
   "outputFilename": "econ_output.csv",
   "harvestDays":"100,200,300",
-  "strategyParameters":"0,0,0,0,0,0,0,0;0,0.25,105,0,0.1,0,0,0,0;0,0.25,105,0,0.1,0,0,0,0;0,0.25,105,0,0.1,0,0,0,0;0,0.25,105,0,0.1,0,0,0,0;0,0.25,105,0,0.1,0,0,0,0;0,0.25,105,0,0.1,0,0,0,0;0,0.25,105,0,0.1,0,0,0,0;0,0.25,105,0,0.1,0,0,0,0",
-  "strategyFlags":"0,0,0,0;1,0,0,0;1,0,0,0;1,0,0,0;1,0,0,0;1,0,0,0;1,0,0,0;1,0,0,0;1,0,0,0",
+  "strategyParameters":"3,0,30,40,0.1,0.1,5,0.8,2;3,0,30,40,0.1,0.1,5,5,0;3,0,30,40,0.1,0.1,5,5,0;3,0,30,40,0.1,0.1,5,5,0;3,0,30,40,0.1,0.1,5,5,0;3,0,30,40,0.1,0.1,5,5,0;3,0,30,40,0.1,0.1,5,5,0;3,0,30,40,0.1,0.1,5,5,0;3,0,30,40,0.1,0.1,5,5,0",
+  "strategyFlags":"0,0,1,0,0;1,0,0,0,0;1,0,0,0,0;1,0,0,0,0;1,0,0,0,0;1,0,0,0,0;1,0,0,0,0;1,0,0,0,0;1,0,0,0,0",
   "agencyFlags":"1",
   "experimentID": -1,
   "agentsbankinfo":"0,0;1,0;2,0;3,0;4,0;5,0;6,0;7,0;8,0",
-  "memoryvalue": 50,
-  "alphaplus": 0.88,
-  "alphaminus": 0.88,
-  "phiplus": 0.61,
-  "phiminus": 0.69,
-  "lambda": 2.25,
-  "referenceincome":300000,
-  "wl":0.0,
-  "wh":0.1
+  "memoryvalue": 5000,
+  "alphaplus": 7, 
+  "alphaminus": 1,
+  "phiplus":0.9,
+  "phiminus":0.045,
+  "lambda": 5,
+  "referenceincome":1000,
+  "wl":0,
+  "wh":-0.0002,
+  "typeofnetwork":2
 }
