changes in the profit calculation

--- a/configs/econConfig.json
+++ b/configs/econConfig.json
@@ -1,27 +1,27 @@
 {
   "planningLength": 91,
-  "freshYield": 1.68195718,
+  "freshYield": 2.533333,
   "juiceYield": 0.0,
   "freshPrice": 17.80, 
   "juicePrice": 0.0,
-  "costs": 36.05, 
+  "costs": 26.70, 
   "biologicalRun": false,
   "projectionLength": 3600,
   "outputFilename": "econ_output.csv",
   "harvestDays":"100,200,300",
   "strategyParameters":"0,0,0,0,0,0.8,0.245,0,0;0,0,0,0,0,0.8,0.245,0,0;0,0,0,0,0,0.8,0.245,0,0;0,0,0,0,0,0.8,0.245,0,0;0,0,0,0,0,0.8,0.245,0,0;0,0,0,0,0,0.8,0.245,0,0;0,0,0,0,0,0.8,0.245,0,0;0,0,0,0,0,0.8,0.245,0,0;0,0,0,0,0,0.8,0.245,0,0",
-  "strategyFlags":"0,0,0,0,0;0,0,0,0,0;0,0,0,0,0;0,0,0,0,0;0,0,0,0,0;0,0,0,0,0;0,0,0,0,0;0,0,0,0,0;0,0,0,0,0",
+  "strategyFlags":"0,1,0,0,0;0,1,0,0,0;0,1,0,0,0;0,1,0,0,0;0,1,0,0,0;0,1,0,0,0;0,1,0,0,0;0,1,0,0,0;0,1,0,0,0",
   "agencyFlags":"1",
   "experimentID": -1,
   "agentsbankinfo":"0,0;1,0;2,0;3,0;4,0;5,0;6,0;7,0;8,0",
   "memoryvalue": 2250,
-  "alphaplus": 0.6, 
-  "alphaminus": 0.6, 
-  "phiplus":0.1814, 
-  "phiminus":0.1814,
+  "alphaplus": 0.9, 
+  "alphaminus": 0.9, 
+  "phiplus":0.1, 
+  "phiminus":0.1,
   "lambda": 0.6,
-  "referenceincome":2250, 
-  "wl":-0.0011, 
-  "wh":0.0011,  
+  "referenceincome":3937.5, 
+  "wl":-0.085233, 
+  "wh":0.085233,  
   "typeofnetwork":2
 }
